--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
 application {
     // Configure the application main class.
-    mainClassName = 'student.gui.StudentGUI'
+    mainClassName = 'survey.gui.SurveyInterface'
 }
 
 // Executes a Java application in a child process.
@@ -59,5 +59,5 @@ task run(type: JavaExec, overwrite: true) {
     classpath = sourceSets.main.runtimeClasspath
 
     // Configure the application main class.
-    main = 'student.gui.StudentGUI'
+    main = 'survey.gui.SurveyInterface'
 }
